Removed js scrollbars, replaced carousel for better touch scrolling handling. Added bug with carousel+turbolinks -_- fcking turbolinks, i hate it

--- a/app/assets/stylesheets/customize.sass
+++ b/app/assets/stylesheets/customize.sass
@@ -31,6 +31,20 @@
 		#aboutMenu .mdl-menu__outline
 			width: 152px !important
 
+#slider
+	margin-bottom: 0 !important
+	.slick-dots
+		bottom: 0 !important
+		li
+			button:before
+				font-size: 13px
+				opacity: 1
+				color: #FF6600
+			&.slick-active
+				button:before
+					opacity: 1
+					color: #FFF
+
 ul.collapsible
 	padding: 0
 	margin: 0
